Revert "create a list table structure in listcampaign component by ankur"
This reverts commit 5b97b41570db2f86df1552bfd137ae390bdfa42f.

--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -1,8 +1,97 @@
 <div fxLayout="row" fxLayoutWrap="wrap">
-  <widget-group [data]=widgetdata></widget-group>
+    <!-- column -->    
+    <div fxFlex.gt-sm="25" fxFlex.gt-xs="25" fxFlex="100">
+      <mat-card>
+        <mat-card-content>
+            <!-- Row -->
+            <div class="d-flex no-block">
+                <!-- column -->
+                <div class="m-r-10 no-shrink">
+                    <button mat-fab mat-card-icon class="shadow-none bg-inverse  bg-success">
+                        <mat-icon>account_circle</mat-icon>
+                    </button>
+                </div> 
+                <!-- column -->
+                <div>
+                    <h3 class="m-0">386</h3>
+                    <h6 class="text-muted m-0">New Clients</h6>
+                </div> 
+                
+            </div>      
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <!-- column -->
+    <!-- column -->    
+    <div fxFlex.gt-sm="25" fxFlex.gt-xs="25" fxFlex="100">
+      <mat-card>
+        <mat-card-content>
+            <!-- Row -->
+            <div class="d-flex no-block">
+                <!-- column -->
+                <div class="m-r-10 no-shrink">
+                    <button mat-fab color="warn" mat-card-icon class="shadow-none  bg-warning">
+                        <mat-icon>local_mall</mat-icon>
+                    </button>
+                </div> 
+                <!-- column -->
+                <div>
+                    <h3 class="m-0">2408</h3>
+                    <h6 class="text-muted m-0">All Projects</h6>
+                </div> 
+                
+            </div>      
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <!-- column --> 
+    <!-- column -->    
+    <div fxFlex.gt-sm="25" fxFlex.gt-xs="25" fxFlex="100">
+      <mat-card>
+        <mat-card-content>
+            <!-- Row -->
+            <div class="d-flex no-block">
+                <!-- column -->
+                <div class="m-r-10 no-shrink">
+                    <button mat-fab color="accent" mat-card-icon class="shadow-none">
+                        <mat-icon>stars</mat-icon>
+                    </button>
+                </div>
+                <!-- column -->
+                <div>
+                    <h3 class="m-0">352</h3>
+                    <h6 class="text-muted m-0">New Items</h6>
+                </div> 
+                 
+            </div>      
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <!-- column --> 
+    <!-- column -->    
+    <div fxFlex.gt-sm="25" fxFlex.gt-xs="25" fxFlex="100">
+      <mat-card>
+        <mat-card-content>
+            <!-- Row -->
+            <div class="d-flex no-block">
+                <!-- column -->
+                <div class="m-r-10 no-shrink">
+                    <button mat-fab color="warn" mat-card-icon class="shadow-none bg-danger">
+                        <mat-icon>content_paste</mat-icon>
+                    </button>
+                </div> 
+                <!-- column -->
+                <div>
+                    <h3 class="m-0">159</h3>
+                    <h6 class="text-muted m-0">New Invoices</h6>
+                </div> 
+                
+            </div>      
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <!-- column -->     
 </div>
-
-<app-table></app-table>
 
 <div fxLayout="row" fxLayoutWrap="wrap">
   <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
