--- a/panel/src/app/message/addmessage/addmessage.component.html
+++ b/panel/src/app/message/addmessage/addmessage.component.html
@@ -1,32 +1,3 @@
-
-<div fxLayout="row" fxLayoutWrap="wrap">
-    <div fxFlex.gt-sm="100" fxFlex="100">
-        <mat-card>
-            <mat-card-content>
-                <mat-card-title>Add Message</mat-card-title>
-                <form class="basic-form" (ngSubmit)="onSubmit()" name="AddMessageForm" #AddMessageForm="ngForm">
-                <div fxLayout="row" fxLayoutWrap="wrap">
-                    <div fxFlex.gt-md="100" fxFlex="100">
-                      <mat-form-field>
-                        <input matInput placeholder="Enter Name" [(ngModel)]="messagedata.name" id="name"  name="name">
-                      </mat-form-field>
-                    </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
-                        <mat-form-field>
-                            <input matInput placeholder="Enter File Name" [(ngModel)]="messagedata.filename"  id="filename" name="filename">
-                        </mat-form-field>
-                    </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
-                      <mat-form-field>
-                        <input matInput placeholder="Enter File" [(ngModel)]="messagedata.file"  id="file" name="file">
-                      </mat-form-field>
-                    </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
-                      <button mat-raised-button color="primary" type="submit">Submit</button>
-                    </div>
-                </div>
-                </form>
-            </mat-card-content>
-        </mat-card>
-    </div>
-</div>
+<p>
+  addmessage works!
+</p>
