Revert All module agian
revert all module agian And create form for supplier and message

--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -111,7 +111,7 @@
                   <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
                 </ng-container>
 
-                <!-- Name Column -->
+                <!-- Name Column  table -->
                 <ng-container matColumnDef="provider">
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Provider </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.provider}} </mat-cell>
