--- a/panel/src/app/extension/listextension/listextension.component.html
+++ b/panel/src/app/extension/listextension/listextension.component.html
@@ -1,3 +1,56 @@
-<p>
-  listextension works!
-</p>
+
+
+<div fxLayout="row" fxLayoutWrap="wrap">
+  <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+    <mat-card>
+      <mat-card-content> 
+        <div class="example-header">
+          <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+          </mat-form-field>
+        </div>
+        <div class="table-rasponsive">
+            <mat-table #table [dataSource]="dataSource" matSort>
+                
+                <ng-container matColumnDef="username">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
+                </ng-container>
+   
+                <ng-container matColumnDef="password">
+                  <mat-header-cell *matHeaderCellDef> Password </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.password}} </mat-cell>
+                </ng-container>
+  
+                <ng-container matColumnDef="callerid">
+                  <mat-header-cell *matHeaderCellDef> Caller ID </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.callerid}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="extension">
+                  <mat-header-cell *matHeaderCellDef> Extension </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.extension}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="host">
+                  <mat-header-cell *matHeaderCellDef> Host </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.host}} </mat-cell>
+                </ng-container>
+  
+                  <ng-container matColumnDef="actions">
+                  <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                  <mat-cell *matCellDef="let row">
+                     
+                      <button mat-raised-button color="primary" (click)="DeleteDetail(row)">Delete</button>
+                  </mat-cell>
+                </ng-container> 
+  
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
+          <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+        </div>    
+      </mat-card-content>
+    </mat-card>
+    </div>
+  </div>
