Custom Datatable is implemented
Custom datatable with basic version is implemented

--- a/panel/src/app/campaign/addcampaign/addcampaign.component.html
+++ b/panel/src/app/campaign/addcampaign/addcampaign.component.html
@@ -14,7 +14,7 @@
                     <!-- column -->
                     <div fxFlex.gt-md="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter Campaign" [(ngModel)]="campaigndata.name" id="name" name="name">
+                        <input matInput placeholder="Enter Campaign" [(ngModel)]="campaigndata.name" formControlName="name" name="name">
                       </mat-form-field>
                     </div>
                     <!-- Supplier -->
