--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -2,7 +2,7 @@
 <div fxLayout="row" fxLayoutWrap="wrap">
   <widget-group [data]=widgetdata></widget-group>
 </div>
-<app-table></app-table>
+<gvtable></gvtable>
 
 <div fxLayout="row" fxLayoutWrap="wrap">
   <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
