table is implement and tested
Table is implement on campaign and tested working with basic options

--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -1,81 +1,6 @@
-
 <div fxLayout="row" fxLayoutWrap="wrap">
   <widget-group [data]=widgetdata></widget-group>
 </div>
-<gvtable></gvtable>
-
-<div fxLayout="row" fxLayoutWrap="wrap">
-  <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
-    <mat-card>
-      <mat-card-content> 
-        <div class="example-header">
-          <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-          </mat-form-field>
-        </div>
-        <div class="table-rasponsive">
-            <mat-table #table [dataSource]="dataSource" matSort>
-                <!-- Position Column 'name', 'provider', 'filename', 'channels', 'ppm', 'ringtime', 
-                  'answertime', 'status'-->
-                <ng-container matColumnDef="name">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-                </ng-container>
-
-                <!-- Name Column  table -->
-                <ng-container matColumnDef="provider">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Provider </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.provider}} </mat-cell>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="filename">
-                  <mat-header-cell *matHeaderCellDef> FileName </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.filename}} </mat-cell>
-                </ng-container>
-
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="channels">
-                  <mat-header-cell *matHeaderCellDef> Channels </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.channels}} </mat-cell>
-                </ng-container>
-
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="ppm">
-                  <mat-header-cell *matHeaderCellDef> Dial/Min </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.ppm}} </mat-cell>
-                </ng-container>
-
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="ringtime">
-                  <mat-header-cell *matHeaderCellDef> Ring-Time </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.ringtime}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="answertime">
-                  <mat-header-cell *matHeaderCellDef> Answer-Time </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.answertime}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="status">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="actions">
-                  <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-                  <mat-cell *matCellDef="let row">
-                      <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
-                      <button mat-raised-button color="primary" (click)="EditDetail(row)">Edit</button>
-                  </mat-cell>
-                </ng-container> 
-
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </mat-table>
-          <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-        </div>    
-      </mat-card-content>
-    </mat-card>
-    </div>
+<div *ngIf="gotdata">
+<app-datatable [label]="'List Campaign'" [header]=Header [field]=displayedColumns [data]=tabledata ></app-datatable>
 </div>
