--- a/panel/src/app/message/listmessage/listmessage.component.html
+++ b/panel/src/app/message/listmessage/listmessage.component.html
@@ -9,16 +9,20 @@
           <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
       </div>
-      <div class="table-rasponsive" *ngIf="gotdata">
+      <div class="table-rasponsive">
           <mat-table #table [dataSource]="dataSource" matSort>
               <ng-container matColumnDef="name">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                <mat-cell *matCellDef="let element"></mat-cell>
+                <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
               </ng-container>
  
               <ng-container matColumnDef="filename">
                 <mat-header-cell *matHeaderCellDef> FileName </mat-header-cell>
-                <mat-cell *matCellDef="let element"></mat-cell>
+                <mat-cell *matCellDef="let element"> 
+                  <audio controls="">
+                    <source type="audio/mpeg" src="http://upwork.gventure.net/nexibell-admin/storage/ivr_message/{{element.filename}}">
+                  </audio>
+                </mat-cell>
               </ng-container>
 
                 <ng-container matColumnDef="actions">
@@ -31,7 +35,7 @@
               <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
               <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-        <mat-paginator [length]="5" [pageSize]="1" [pageSizeOptions]="[1, 5, 10, 20]"></mat-paginator>
+        <mat-paginator [length]="5" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
       </div>    
     </mat-card-content>
   </mat-card>
