List view URL is updated

--- a/panel/src/app/message/listmessage/listmessage.component.html
+++ b/panel/src/app/message/listmessage/listmessage.component.html
@@ -20,7 +20,7 @@
                 <mat-header-cell *matHeaderCellDef> FileName </mat-header-cell>
                 <mat-cell *matCellDef="let element"> 
                   <audio controls="">
-                    <source type="audio/mpeg" src="http://upwork.gventure.net/nexibell-admin/storage/ivr_message/{{element.filename}}">
+                    <source type="audio/mpeg" src="http://104.222.98.164/broadcast/upload/{{element.filename}}">
                   </audio>
                 </mat-cell>
               </ng-container>
